update visual